// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StandaloneIcon Interactive StandaloneIcon renders 1`] = `
<button
  class="interactive"
  style="padding:4px;margin:-4px"
>
  <i
    aria-label="Some text for the screen readers."
    class="iconSpyglass size24"
  >
    
  </i>
</button>
`;

exports[`StandaloneIcon Plain StandaloneIcon renders 1`] = `
<i
  aria-label="Some text for the screen readers."
  class="iconSpyglass size24"
>
  
</i>
`;
